bppackaging/src/objects/SearchConfigurations__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Object and searchable fields configurations are to be stored here</description>
    <fields>
        <fullName>Display_Field__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <inlineHelpText>Field API name for which the field value will be displayed as auto-complete suggestion</inlineHelpText>
        <label>Display Field for Auto-Complete</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Info__c</fullName>
        <description>Additional information of the search result to display in search suggestions. Object field name should be inserted in format in braces like: {Name} e.g. Unit {Name} {Qty__c}</description>
        <inlineHelpText>Additional information of the search result to display in search suggestions. Object field name should be inserted in format in braces like: {Name} e.g. Unit {Name} {Qty__c}</inlineHelpText>
        <label>Display Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Object name for which the setting applies</description>
        <inlineHelpText>Object API Name (In case Customer and Vendor, provide Customer and Vendor respectively)</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Preferred order number of the object records to be displayed in search suggestions. If found conflict then ordered by object name</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Searchable_Field__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <inlineHelpText>Searchable field API name for which auto-complete search text will perform search. (Only 1 Field)</inlineHelpText>
        <label>Searchable Field for Auto-Complete</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SearchConfigurations</label>
</CustomObject>